# pocket

./: Cargo.toml
examples/: async.rs
src/: batch.rs  client.rs  collection.rs  error.rs  files.rs  lib.rs
src/batch/: mod.rs
src/blocking/: batch.rs  collection.rs  mod.rs
src/non_blocking/: batch.rs  collection.rs  mod.rs
