[package]
name = "pocket"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"

jwt = "0.16.0"
reqwest = { version = "0.12.26", features = ["stream", "json", "multipart"] }
