[package]
name = "pocket"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
isahc = { version = "1.7.2", features = ["text-decoding"] }
url = "2.5.7"
futures-lite = "2.6.1"
http-client-multipart = "0.1.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"], optional = true }

[features]
example = ["dep:tokio"]
