[package]
name = "pocket"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = { version = "0.27.2", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
url = "2.5.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tokio = { version = "1.48.0", features = ["fs"] }
reqwest = { version = "0.12.28", features = ["multipart", "json", "stream"] }
mime_to_ext = "0.1.12"
tokio-util = { version = "0.7.17", features = ["codec"] }

[features]
example = ["tokio/macros","tokio/rt-multi-thread"]
